Fixed hover text, added react propTypes and fixed icon spacing

--- a/server/frontend/src/styles/Dashboard.css
+++ b/server/frontend/src/styles/Dashboard.css
@@ -6,3 +6,6 @@ h2 {
     padding-top: 15px;
 }
 
+.bi {
+    margin: 0.1rem;
+}
